[package]
name = "glm-local-proxy"
version = "0.1.0"
edition = "2021"
description = "Local proxy that converts standard OpenAI API format to GLM domestic API format"

[[bin]]
name = "glm-local-proxy"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
